# VoxelGameEngine

./: .clang-format  App.cpp  App.hpp  BodyPart.cpp  BodyPart.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkCoord.cpp  ChunkCoord.hpp  ChunkGraphics.cpp  ChunkGraphics.hpp  ChunkLoader.cpp  ChunkLoader.hpp  ChunkUpdater.cpp  ChunkUpdater.hpp  ChunkVoxels.cpp  ChunkVoxels.hpp  Clock.cpp  Clock.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CpuChunk.cpp  CpuWaterMesh.hpp  Crosshair.cpp  Crosshair.hpp  Cube.cpp  Cube.hpp  CubeData.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FontManager.cpp  FontManager.hpp  Frustum.cpp  Frustum.hpp  GridGenerator.cpp  (+37 more)
core/: CMakeLists.txt
core/inc/: Camera.hpp  ThreadPool.hpp
core/src/: Clock.cpp  ThreadPool.cpp
entities/: CMakeLists.txt
entities/inc/: Entity.hpp  EntityManager.hpp  Hitbox.hpp  PhysicsComponent.hpp
entities/src/: Entity.cpp  PhysicsComponent.cpp
glad/src/: glad.c
physics/: CMakeLists.txt
physics/src/: Frustum.cpp  Raycaster.cpp
rendering/: CMakeLists.txt
rendering/inc/: RenderableWaterMesh.hpp  TextureManager.hpp  VertexData.hpp
rendering/src/: RenderableChunk.cpp  RenderableWaterMesh.cpp  Renderer.cpp  Shader.cpp  VertexDataBuilder.cpp
shaders/: crosshair_shader.fs  cube_shader.fs  cube_shader.vs  entity_shader.fs  entity_shader.vs  fragment_shader1.fs  fragment_shader2.fs  light_source.fs  light_source.vs  vertex_shader.vs  water_shader.fs  water_shader.vs
ui/: CMakeLists.txt
ui/src/: Crosshair.cpp  FontManager.cpp
utils/: CMakeLists.txt
utils/src/: NeighborCubesGatherer.cpp
water/: CMakeLists.txt
water/inc/: WaterMeshBuilder.hpp
world/: CMakeLists.txt
world/inc/: ChunkCoord.hpp  ChunkLoader.hpp  ChunkVoxels.hpp  CpuChunk.hpp  GridGenerator.hpp  LightPropagator.hpp  World.hpp
world/src/: ChunkCoord.cpp  ChunkLoader.cpp  CpuChunk.cpp  GridGenerator.cpp  LightPropagator.cpp  World.cpp
